@@ -18,6 +18,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [SYSTEM] [SETTINGS] Use Hostname value from Django settings
 ### Fixed
 - [SYSTEM] [MONGODB] Always refer to settings to connect to mongodb
+- [API_PARSER] [BEYONDTRUST_REPORTINGS] 'since' going up infinitely in some cases
 
 
 ## [2.22.1] - 2025-03-03
